--- a/docs/_includes/sub-navbar.html
+++ b/docs/_includes/sub-navbar.html
@@ -1,37 +1,5 @@
 <!-- Navbar
 ================================================== -->
-<div class="navbar navbar-inverse navbar-fixed-left">
-  <div class="container">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">B</a>
-    <div class="nav-collapse collapse">
-      <ul class="nav">
-<!--         <li {% if page.title == "Bootstrap" %}class="active"{% endif %}>
-          <a href="/"><span class="glyphicon glyphicon-home"></span></a>
-        </li>
- -->        <li {% if page.title == "Getting started" %}class="active"{% endif %}>
-          <a href="/getting-started" data-toggle="tooltip" data-placement="right" title="Getting started"><span class="glyphicon glyphicon-list"></span></a>
-        </li>
-        <li {% if page.title == "CSS" %}class="active"{% endif %}>
-          <a href="/css" data-toggle="tooltip" data-placement="right" title="CSS"><span class="glyphicon glyphicon-tint"></span></a>
-        </li>
-        <li {% if page.title == "Components" %}class="active"{% endif %}>
-          <a href="/components" data-toggle="tooltip" data-placement="right" title="Components"><span class="glyphicon glyphicon-fire"></span></a>
-        </li>
-        <li {% if page.title == "JavaScript plugins" %}class="active"{% endif %}>
-          <a href="/javascript" data-toggle="tooltip" data-placement="right" title="JavaScript plugins"><span class="glyphicon glyphicon-dashboard"></span></a>
-        </li>
-        <li {% if page.title == "Customize and download" %}class="active"{% endif %}>
-          <a href="/customize" data-toggle="tooltip" data-placement="right" title="Customize"><span class="glyphicon glyphicon-cog"></span></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
 
 <div class="navbar navbar-inverse navbar-fixed-left">
   <div class="row">
@@ -40,15 +8,19 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">B</a>
+    <a class="navbar-brand" href="/">Thatisaweso.me</a>
     <div class="nav-collapse collapse">
       <ul class="nav">
 <!--         <li {% if page.title == "Bootstrap" %}class="active"{% endif %}>
           <a href="/"><span class="glyphicon glyphicon-home"></span></a>
         </li>
- -->        <li class="col-col-lg-3"> <a href=".../sub/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span>Back</button></a>
+        
+ -->    
+        <li><span class="divider-vertical"></span></li>
+        <li> <a href="/sub/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
+        <li><span class="divider-vertical"></span></li>
         </li>
-        <li class="col-col-lg-3"><h1>integers</h1></li>
+        <li><h3>Integers</h3></li>
         </li>
       </ul>
     </div>
