--- a/docs/assets/css/sub.css
+++ b/docs/assets/css/sub.css
@@ -150,13 +150,9 @@ section > ul li {
 -------------------------------------------------- */
 
 .sub-sidebar {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 240px;
-  overflow-y: scroll;
+  /* display: none; */
+  position: relative;
+  width: 100%;
   text-shadow: 0 1px 0 #fff;
   background-color: #f5f5f5;
   box-shadow: inset -1px 0 0 #e5e5e5;
@@ -713,6 +709,12 @@ input.focused {
   /* Show the docs nav */
   .sub-sidebar {
     display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 240px;
+    overflow-y: scroll;
   }
 
   /* Tweak display of docs jumbotrons */
@@ -765,7 +767,7 @@ input.focused {
 
 .lesson-space {
   border: 1px solid #000000;
-  height: 500px;
+  height: auto;
 }
 
 .sub-lesson-space {
