--- a/docs/_includes/sub-colophon.html
+++ b/docs/_includes/sub-colophon.html
@@ -5,12 +5,6 @@
 
     <div class="sub-social">
       <ul class="sub-social-buttons">
-        <li>
-          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
-        </li>
-        <li>
-          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
-        </li>
         <li class="follow-btn">
           <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
         </li>
@@ -21,15 +15,15 @@
     </div>
 
 
-    <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
-    <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-    <p><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+    <p>Designed and built with all the love in the world by <a href="http://twitter.com/textreme" target="_blank">@textreme</a>.</p>
+    <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.</p>
+
     <ul class="footer-links">
-      <li><a href="http://blog.getbootstrap.com">Blog</a></li>
+      <li><a href="http://blog.getbootstrap.com">About</a></li>
       <li class="muted">&middot;</li>
-      <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Issues</a></li>
+      <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Terms of Use</a></li>
       <li class="muted">&middot;</li>
-      <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">Changelog</a></li>
+      <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">Contact</a></li>
     </ul>
   </div>
 </footer>
