--- a/docs/_includes/sub-header.html
+++ b/docs/_includes/sub-header.html
@@ -4,10 +4,10 @@
 <meta name="author" content="">
 
 <title>
-  {% if page.title == "Bootstrap" %}
+  {% if page.title == "tia" %}
     {{ page.title }}
   {% else if %}
-    {{ page.title }} &middot; Bootstrap
+    tia &middot; {{ page.title }}
   {% endif %}
 </title>
 
@@ -18,7 +18,7 @@
 <!-- Documentation extras -->
 <link href="/assets/css/sub.css" rel="stylesheet">
 <link href="/assets/css/home.css" rel="stylesheet">
-<link href="/assets/css/pygments-manni.css" rel="stylesheet">
+<!--<link href="/assets/css/pygments-manni.css" rel="stylesheet">-->
 {% endif %}
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
