--- a/docs/_layouts/lesson.html
+++ b/docs/_layouts/lesson.html
@@ -2,16 +2,19 @@
 <html lang="en">
   <head>
     <!-- Meta, title, CSS, favicons, etc. -->
-    {% include header.html %}
+    {% include sub-header.html %}
     <!-- Place anything custom after this. -->
   </head>
-  <body>
+  <body class="lesson">
+
+    <!-- Navbar -->
+    {% include sub-navbar.html %}
 
     <!-- Page content of course! -->
     {{ content }}
 
     <!-- JS and analytics only. -->
-    {% include footer.html %}
+    {% include sub-footer.html %}
 
   </body>
 </html>
