--- a/docs/assets/css/home.css
+++ b/docs/assets/css/home.css
@@ -1,28 +1,92 @@
 /* Home */
 .jumbotron {
   text-align: center;
+  background-color: #ffffff;
 }
 
-/* Thumbs */
-.thumbnail,
-.img-thumbnail {
-  margin-bottom: 20px;
-  color: #111;
-  border-radius: 0;
+.jumbotron h1 {
+  font-size: 100px;
 }
-.thumbnail:hover {
+
+a:hover {
   text-decoration: none;
 }
+
+.jumbotron .linx{
+  color: #333;
+  padding: 20px;
+  border-right: 4px solid #333;
+  height: 100%;
+}
+
+.linx:hover, .linx:active {
+  background-color: #4FB;
+}
+
+
+/* Thumbs */
+
+
+.thumbnail,
+.img-thumbnail {
+  padding: 0px;
+  line-height: 20px;
+  background-color: #ffffff;
+  margin-bottom: 20px;
+  color: #333;
+  border-radius: 0px;
+  -webkit-transition: all 0.2s ease-in-out;
+     -moz-transition: all 0.2s ease-in-out;
+       -o-transition: all 0.2s ease-in-out;
+          transition: all 0.2s ease-in-out;
+}
+
+.thumbnail {
+  display: block;
+}
+
+.img-thumbnail {
+  display: inline-block;
+}
+
+a.thumbnail:hover,
+a.thumbnail:focus {
+  border-color: #4fb;
+  text-decoration: none;
+  color: #4FB;
+  box-shadow: 0 0px 18px 8px rgba(68, 255, 187, 0.50);  
+  -webkit-box-shadow: 0 0px 18px 8px rgba(68, 255, 187,0.50);
+  -moz-box-shadow: 0 0px 18px 8px rgba(68, 255, 187, 0.50);
+}
+
+.thumbnail > img {
+  display: block;
+  max-width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.thumbnail .caption {
+  padding: 9px;
+  color: #333333;
+}
+
 .panel {
   border-radius: 0;
 }
 
 /* Navbar */
+
+.navbar {
+  background-color: #fff;
+}
+
 .navbar,
 .navbar-brand {
-  height: 50px;
-  line-height: 50px;
+  height: 60px;
+  line-height: 60px;
   border-radius: 0;
+  border-bottom: 1px solid #e5e5e5;
 }
 .navbar-brand {
   padding: 0 15px 0 20px;
@@ -30,44 +94,43 @@
 .nav-collapse {
   display: inline-block;
 }
-.navbar-inverse .divider-vertical {
+.divider-vertical {
   display: inline-block;
-  height: 50px;
+  height: 60px;
   margin: 0 9px;
-  border-right: 1px solid #333;
-  border-left: 1px solid #111;
+  border-left: 1px solid #e5e5e5;
 }
 .navbar .nav > li > a {
   position: relative;
-  display: block;
+Free Reyes @ Robot Victory  display: block;
   padding: 0 15px;
-  height: 50px;
-  line-height: 50px;
+  height: 60px;
+  line-height: 60px;
 }
 .navbar .nav > li > a:hover,
 .navbar .nav > li > a:focus {
   text-decoration: none;
   background: none;
+  border: 4px solid #333;
 }
 .navbar .nav h3 {
   color: #999;
   font-size: 17.5px;
   margin: 0 15px;
   padding: 0 15px;
-  height: 50px;
-  line-height: 50px;
+  height: 60px;
+  line-height: 60px;
 }
 
 /* Nav pills */
 .nav-pills > li > a {
   border-radius: 0;
+  border: 4px solid #333;
 }
 .nav-pills > li + li > a {
   margin-left: 0;
 }
-.nav-pills > li > a.thumbnail {
-  border-left: 0;
-}
+
 .nav-pills > li:first-child > a.thumbnail {
   border-left: 1px solid #dddddd;
 }
@@ -90,6 +153,7 @@
 .tab-content {
   margin-top: 20px;
   margin-left: 0;
+  height: 100%;
 }
 .tab-content .nav-pills > li {
   margin-left: 20px;
@@ -98,10 +162,10 @@
   margin-left: 0;
 }
 .tab-content .nav-pills > li > a {
-  height: 172px;
+  height: 100%;
 }
 .tab-content .nav-pills > li > a.thumbnail {
-  border-left: 1px solid #dddddd;
+  border: 1px solid #dddddd;
 }
 .tab-content .nav-pills > li > a.thumbnail:hover {
   border-color: #428bca;
@@ -110,3 +174,22 @@
   border: 1px solid #dddddd;
   padding: 20px;
 }
+
+/* Text */
+
+/* SVG */
+.svgCenter {
+  margin: auto;
+  display: block;
+  
+}
+
+svg, .s .col .col-lg-3 {
+    height: 100%;
+    width: 100%;
+}
+
+svg, .lesson-space {
+  height: 100%;
+}
+
