--- a/docs/_includes/colophon.html
+++ b/docs/_includes/colophon.html
@@ -1,10 +1,10 @@
 <!-- Footer
 ================================================== -->
-<footer class="sub-footer">
-  <div class="sub-container">
+<footer class="bs-docs-footer">
+  <div class="bs-docs-container">
 
-    <div class="sub-social">
-      <ul class="sub-social-buttons">
+    <div class="bs-docs-social">
+      <ul class="bs-docs-social-buttons">
         <li>
           <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
         </li>
