--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -16,8 +16,7 @@
 
 {% if page.layout != "example" %}
 <!-- Documentation extras -->
-<link href="/assets/css/sub.css" rel="stylesheet">
-<link href="/assets/css/home.css" rel="stylesheet">
+<link href="/assets/css/docs.css" rel="stylesheet">
 <link href="/assets/css/pygments-manni.css" rel="stylesheet">
 {% endif %}
 
