--- a/docs/_layouts/example.html
+++ b/docs/_layouts/example.html
@@ -2,19 +2,16 @@
 <html lang="en">
   <head>
     <!-- Meta, title, CSS, favicons, etc. -->
-    {% include sub-header.html %}
+    {% include header.html %}
     <!-- Place anything custom after this. -->
   </head>
-  <body class="lesson">
-
-    <!-- Navbar -->
-    {% include sub-navbar.html %}
+  <body>
 
     <!-- Page content of course! -->
     {{ content }}
 
     <!-- JS and analytics only. -->
-    {% include sub-footer.html %}
+    {% include footer.html %}
 
   </body>
 </html>
