--- a/docs/_layouts/sub-lesson.html
+++ b/docs/_layouts/sub-lesson.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <!-- Meta, title, CSS, favicons, etc. -->
-    {% include header.html %}
+    {% include sub-header.html %}
     <!-- Place anything custom after this. -->
   </head>
-  <body class="bs-docs-home">
+  <body class="sub-lesson">
+
+    <!-- Navbar -->
+    {% include sub-navbar.html %}
 
     <!-- Page content of course! -->
     {{ content }}
