--- a/docs/_includes/sub-navbar.html
+++ b/docs/_includes/sub-navbar.html
@@ -1,21 +1,26 @@
 <!-- Navbar
 ================================================== -->
 
-<div class="navbar navbar-fixed-left">
+<div class="navbar navbar-inverse navbar-fixed-left">
   <div class="row">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
+    <a class="navbar-brand" href="/">Thatisaweso.me</a>
     <div class="nav-collapse collapse">
-      <ul class="nav">  
-        <li> <a href="/tests/sat/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
+      <ul class="nav">
+<!--         <li {% if page.title == "Bootstrap" %}class="active"{% endif %}>
+          <a href="/"><span class="glyphicon glyphicon-home"></span></a>
+        </li>
+        
+ -->    
         <li><span class="divider-vertical"></span></li>
-        <li><a class="navbar-brand" href="/">Thatisaweso.me</a></li>
+        <li> <a href="/sub/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
         <li><span class="divider-vertical"></span></li>
         </li>
-        <li><h3>Post Name of Page</h3></li>
+        <li><h3>Integers</h3></li>
         </li>
       </ul>
     </div>
