--- a/docs/_layouts/sub-home.html
+++ b/docs/_layouts/sub-home.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <!-- Meta, title, CSS, favicons, etc. -->
-    {% include header.html %}
+    {% include sub-header.html %}
     <!-- Place anything custom after this. -->
   </head>
-  <body class="bs-docs-home">
+  <body class="sub-home" data-spy="scroll" data-target=".navbar-fixed-top">
+
+
+    <!-- Fixed Navbar nav include sub-fixed-navbar.html -->
+
 
     <!-- Page content of course! -->
     {{ content }}
